--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>HEllo world</p>
+    <p>HEllo world updated</p>
   </body>
 </html>
